# waves-gg

./: Cargo.toml  README  example.yml
src/: generator_settings.rs  genesis_config.rs  lib.rs  main.rs  waves_crypto.rs
