[package]
name = "waves-gg"
version = "0.1.0"
authors = ["Alexandr Makoed <me@dsfn.gq>"]
edition = "2018"

[dependencies]
config = "0.9.2"
clap = "2.33.0"
base58 = "^0.1"
rand = "^0.6.5"
curve25519-dalek = "^1.1.3"
ed25519-dalek = "^0.9.1"
sha2 = "^0.8"
sha3 = "^0.8"
blake2 = "^0.8"
serde = { version = "1.0", features = ["derive"] }

